Bug 951988 - IonMonkey: Use canBeNegativeDividend() in the ARM backend. r=mjrosenb, a=lsblakk